# Alchymine

./: .env.example  .env.production.example  .gitattributes  .gitignore  .trivyignore  Alchymine PRD v6 Rebrand.docx  Alchymine PRD v7 FiveSystem.docx  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  alembic.ini  pyproject.toml  run.ps1
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  creative_module.yml  feature_request.yml  skill_proposal.yml  wealth_module.yml
.github/workflows/: build.yml  ci.yml  diagnose.yml  prepare-release.yml  release.yml  security.yml
alchymine/: __init__.py  config.py  email.py
alchymine/agents/: __init__.py
alchymine/agents/crews/: __init__.py  base.py  creative.py  healing.py  intelligence.py  perspective.py  wealth.py
alchymine/agents/growth/: __init__.py  context_builder.py  system_prompts.py
alchymine/agents/orchestrator/: __init__.py  coordinator.py  graphs.py  intent.py  orchestrator.py  synthesis.py
alchymine/agents/quality/: __init__.py  ethics_check.py  validators.py
alchymine/api/: __init__.py  auth.py  deps.py  main.py  middleware.py
alchymine/api/routers/: admin.py  astrology.py  auth.py  biorhythm.py  bridges.py  chat.py  compatibility.py  creative.py  feedback.py  generative_art.py  healing.py  healing_skills.py  health.py  integration.py  journal.py  numerology.py  outcomes.py  personality.py  perspective.py  profile.py  reports.py  spiral.py  streaming.py  wealth.py
alchymine/api/schemas/: __init__.py  completeness.py
alchymine/cli/: bootstrap_admin.py
alchymine/db/: __init__.py  base.py  encryption.py  models.py  repository.py
alchymine/db/migrations/: env.py
alchymine/engine/: __init__.py  intention_map.py  profile.py
alchymine/engine/archetype/: __init__.py  definitions.py  mapper.py
alchymine/engine/astrology/: __init__.py  aspects.py  chart.py  transits.py
alchymine/engine/biorhythm/: __init__.py  calculator.py  compatibility.py  range_calc.py
alchymine/engine/bridges/: __init__.py  registry.py
alchymine/engine/creative/: __init__.py  assessment.py  collaboration.py  projects.py  (+1 more)
alchymine/llm/: __init__.py  art_prompts.py  art_storage.py  client.py  gemini.py  narrative.py
alchymine/mcp/: __init__.py  base.py  creative_server.py  healing_server.py  intelligence_server.py  perspective_server.py  transport.py  wealth_server.py
alchymine/outcomes/: __init__.py  tracker.py
alchymine/prompts/: __init__.py  __main__.py  validate.py
alchymine/safety/: __init__.py  audit.py  content_filter.py  guardrails.py
alchymine/web/: jest.config.js  jest.setup.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
alchymine/workers/: __init__.py  celery_app.py  tasks.py
docs/adr/: 001-monorepo-structure.md  002-local-first-data.md  003-healing-swarm-integration.md  004-wealth-engine.md  005-creative-forge.md  006-perspective-prism.md  007-alchemical-spiral.md  008-agent-issue-tracking.md  009-archon-integration.md
docs/diagrams/: 01-system-architecture.excalidraw  02-information-flow.excalidraw  03-user-journey.excalidraw  04-current-functions.excalidraw  05-roadmap-90-day.excalidraw
docs/guides/: archon-integration.md  deployment-guide.md
docs/plans/: 2026-03-08-intake-persistence-fix.md  2026-03-08-waitlist-admin-invites.md  2026-03-09-healing-placeholders-pdf-fix.md  2026-03-10-discover-creative-ux-fixes.md  2026-03-10-section-page-422-fixes.md
infrastructure/: Dockerfile.api  Dockerfile.web  docker-compose.deploy.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
infrastructure/docker/: Dockerfile.api  Dockerfile.web  Dockerfile.worker
infrastructure/nginx/: nginx.conf  ssl-params.conf
infrastructure/postgres/: init.sql
infrastructure/scripts/: backup-db.sh  deploy-digitalocean.sh  deploy-zero-downtime.sh  init-ssl.sh  restore-db.sh
scripts/: create-phase-issues.sh  reset-dev-db.sh  setup-github-tracking.sh
skills/healing-swarm-skills/: README.md
tests/: conftest.py  test_config.py  test_email.py
tests/agents/: test_context_builder.py  test_coordinator_profile_load.py  test_crews.py  test_graphs.py  test_growth_prompts.py  test_llm.py  test_orchestrator.py  test_prompts.py  test_quality.py  test_synthesis.py
tests/api/: conftest.py  test_admin.py  test_art_brand_and_journey.py  test_astrology.py  test_auth.py  test_biorhythm.py  test_bridges.py  test_chat.py  test_chat_router.py  test_chat_search.py  test_compatibility.py  test_creative_router.py  test_evidence_and_export.py  test_feedback.py  test_generative_art.py  test_healing_router.py  test_healing_skills.py  test_healing_spiral_route.py  test_health.py  test_integration.py  test_journal.py  test_middleware.py  test_numerology.py  test_outcomes.py  test_personality_router.py  test_perspective_router.py  test_pipeline_integration.py  test_profile_completeness.py  test_profile_router.py  test_reassess.py  test_report_html_export.py  test_report_pdf.py  test_reports_router.py  test_streaming.py  test_waitlist.py  test_wealth.py
tests/db/: conftest.py  test_chat_messages.py  test_migrations.py  test_models.py  test_repository.py
tests/engine/: test_archetype.py  test_assessment.py  test_astrology.py  test_biorhythm.py  test_bridges_registry.py  test_creative.py  test_creative_assessment_proxy.py  test_crisis.py  test_debt.py  test_healing.py  test_integration_bridges.py  test_numerology.py  test_personality.py  test_perspective.py  test_profile.py  test_skills_loader.py  test_spiral_router.py  test_wealth.py
tests/infrastructure/: test_docker_configs.py
tests/integration/: conftest.py  test_full_pipeline.py  test_healing_pipeline_e2e.py
tests/llm/: __init__.py  test_art_prompts.py  test_gemini.py
tests/mcp/: __init__.py  test_base.py  test_creative_server.py  test_healing_server.py  test_intelligence_server.py  test_perspective_server.py  test_transport.py  test_wealth_server.py
tests/safety/: test_audit.py  test_content_filter.py  test_guardrails.py  test_safety_integration.py
tests/workers/: test_tasks.py
(+258 files in other folders)
