[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alchymine"
version = "0.1.0"
description = "Open-Source AI-Powered Personal Transformation Operating System"
readme = "README.md"
license = "CC-BY-NC-SA-4.0"
requires-python = ">=3.11"
authors = [
    { name = "Tyler Sammy", email = "tyler@futuretalk.ca" },
]
dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    # Async tasks
    "celery[redis]>=5.4.0",
    "redis>=5.2.0",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # Astrology
    "pyswisseph>=2.10.0",
    # Security
    "cryptography>=43.0.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    # LLM
    "anthropic>=0.40.0",
    "httpx>=0.28.0",
    # Utilities
    "pyyaml>=6.0.0",
    "python-multipart>=0.0.12",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "aiosqlite>=0.20.0",
    # Linting
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    # Type stubs
    "types-pyyaml>=6.0.0",
    "types-redis>=4.6.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "UP",   # pyupgrade
    "ANN",  # flake8-annotations
]
ignore = [
    "ANN401",  # Dynamically typed expressions (Any) — needed for SQLAlchemy TypeDecorators
    "ANN001",  # Missing type annotation for function argument — covered by mypy
    "ANN003",  # Missing type annotation for **kwargs — covered by mypy
    "S101",    # Use of assert (OK in tests)
    "E501",    # Line too long — handled by ruff format where possible
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "ANN"]
"alchymine/db/migrations/**/*.py" = ["ANN", "E501"]
"alchymine/api/routers/**/*.py" = ["B008"]  # FastAPI Depends() in defaults is standard

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = true
disallow_untyped_decorators = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = false

[[tool.mypy.overrides]]
module = [
    "alembic.*",
    "celery.*",
    "redis.*",
    "swisseph.*",
    "jose.*",
    "passlib.*",
    "bcrypt.*",
    "fastapi.*",
    "pydantic.*",
    "pydantic_settings.*",
    "sqlalchemy.*",
    "starlette.*",
    "cryptography.*",
    "anthropic.*",
    "httpx.*",
    "yaml.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = [
    "alchymine.agents.*",
    "alchymine.db.migrations.*",
]
disallow_untyped_defs = false
disallow_untyped_decorators = false
check_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v"

[tool.hatch.build.targets.wheel]
packages = ["alchymine"]
